manifests/kuard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard-demo
  labels:
    app: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard-demo
  labels:
    app: kuard
spec:
  type: ClusterIP
  selector:
    app: kuard
  ports:
  - name: http
    port: 4444
    protocol: TCP
    targetPort: 8080
