manifests/kuard/service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-np
  namespace: kuard-demo
spec:
  type: NodePort
  selector:
    app: kuard
  ports:
  - name: http-np
    port: 80
    targetPort: 8080
    nodePort: 30001
